<resources>
    <string name="app_name">JavaApp</string>
    <string name="matn">Salom Dunyo</string>
    <string name="btn1_matn">Matnni ko\'rsatish</string>
    <string name="btn2_matn">Matnni yashirish</string>
    <string name="natija_text">0</string>
    <string name="matn2">Ikkinchi oyna</string>
    <string name="second_activity">Keyingi oynaga o\'tish</string>
    <string name="first_activity_btn">Oldingi oyna</string>
    <string name="matn_3">Uchinchi Oyna</string>
    <string name="keyingi_oyna">Keyingi Oyna</string>
    <string name="matnni_kiriting">Matnni kiriting</string>
    <string name="mev_yoqadi">Sizga qaysi meva yoqadi</string>
    <string name="act_3_natija">Natija</string>
    <string name="olma">Olma</string>
    <string name="banan">Banan</string>
    <string name="kivi">Kivi</string>
    <string name="apelsin">Apelsin</string>
    <string name="news">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.\n\nThe standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
</resources>