<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etv"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="75dp"
        android:text="@string/matn"
        android:textSize="40sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="54dp"
        android:text="@string/btn1_matn" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn2_matn" />

    <TextView
        android:id="@+id/natija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/natija_text"
        android:textColor="#00f"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_next_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="35dp"
        android:text="@string/second_activity" />

    <EditText
        android:id="@+id/etv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="390dp"
        android:autofillHints=""
        android:ems="15"
        android:hint="@string/matnni_kiriting"
        android:inputType="text"
        android:text=""
        android:textColor="#9505AA"
        android:textColorHint="#CDDC39"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="99dp"
        android:text="Web sahifa" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="174dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/news"
            android:textAlignment="inherit"
            android:textColor="#FF5722"
            android:textSize="30sp"


            />

    </ScrollView>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="121dp"
        tools:ignore="ExtraText"
        android:checked="true"
        />

</RelativeLayout>