<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="251dp"
        android:text="@string/matn2"
        android:textColor="#FF9800"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        >

    <Button
        android:id="@+id/btn_last_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        android:text="@string/first_activity_btn"

        />

    <Button
        android:id="@+id/btn_next_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyingi_oyna"
        android:textSize="25sp"
        />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:textSize="30sp"
        android:text="Banan" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:textSize="30sp"
        android:text="Olma" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="238dp"
        android:text="Nok"
        android:textSize="30sp" />

    <Button
        android:id="@+id/narx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="69dp"
        android:text="Narx"
        android:textSize="30sp" />

    <ToggleButton
        android:id="@+id/btntg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="359dp"
        android:checked="true"
        android:textOff="off"
        android:textOn="on" />
</RelativeLayout>